<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7.6"
                    android:src="@drawable/app_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_LayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <com.marginfresh.Fonts.LatoMediunItalicEdit
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_id"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:backgroundTint="@color/black_light"/>

            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_LayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:passwordToggleEnabled="true">
                <com.marginfresh.Fonts.LatoMediunItalicEdit
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16"
                    android:singleLine="true"
                    android:backgroundTint="@color/black_light"/>

            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp"
                android:elevation="0dp">
                <com.marginfresh.Fonts.LatoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/btn_Login"
                    android:layout_margin="1dp"/>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>
            <com.marginfresh.Fonts.LatoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="end"
                android:text="Forgot Password?"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="end"
                android:id="@+id/tv_forgotPass"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/or_colour"
                    android:layout_centerVertical="true"/>
                <com.marginfresh.Fonts.LatoRegularTextView
                    android:id="@+id/btn_cartCount"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:textSize="8sp"
                    android:text="OR"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/or_bg"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.facebook.login.widget.LoginButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_facebookLogin"
                    android:visibility="invisible"/>
                <com.marginfresh.Fonts.LatoRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/connect_fb"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:text="Connect With Facebook"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/fb"
                    android:onClick="onClick"
                    android:paddingLeft="20dp"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!--<com.google.android.gms.common.SignInButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_googleSignIn"
                    android:visibility="visible"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"></com.google.android.gms.common.SignInButton>
-->
                <com.marginfresh.Fonts.LatoRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/connect_google"
                    android:text="Connect With Google"
                    android:textColor="@color/white"
                    android:gravity="center|left"
                    android:textSize="20sp"
                    android:id="@+id/tv_google"
                    android:paddingLeft="60dp"
                    android:onClick="onClick"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:visibility="visible"/>
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:layout_below="@+id/lin_main"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"/>
                <com.marginfresh.Fonts.LatoRegularTextView
                    android:id="@+id/txt_not_account"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/not_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/textsize16" />

                <com.marginfresh.Fonts.LatoRegularTextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin8"
                    android:text="@string/register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize16"
                    android:layout_toRightOf="@+id/txt_already"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>